Fix - issue where shift+v couldn't be toggled off pressing it again; Fix - issue where toggling off selected token vision while having a token selected wasn't working as expected until clicking off token; Fix - issue with hover text from zoom/other buttons being clickable

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -1782,7 +1782,8 @@ padding-bottom: 5px;
         var(--negative-shadow) var(--positive-shadow) 0px #000, 
         var(--positive-shadow) var(--positive-shadow) 0px #000, 
         0px 0px 5px #000;
-    }
+    pointer-events:none;
+}
 
 #token_map_items .labelToken.hasTooltip:after, 
 #token_map_items .labelToken.hasTooltip:hover:after {
